--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
     <title>bouncy template</title>
 </head>
@@ -43,29 +46,67 @@
                 <div class="b-headerSlider">
                     <h1 class="b-headerSlider__title">We Are Code Cafe</h1>
                     <p class="b-headerSlider__desc">At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                        blanditiis <br> praesentium voluptatum</p>
+                        blanditiis <br> praesentium voluptatum
+                    </p>
                     <a href="#"><img src="images/slider-hover.png" alt="hover" class="b-headerSlider__hover "></a>
                 </div>
             </header>
             <section class="b-aboutUs row">
                 <div class="b-aboutUs__text col-md-5 ">
-                    <h2 class="b-aboutUs__title">This is Bouncy</h2>
-                    <p class="b-aboutUs__desc">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                    <h2 class="b-sectionTitle">This is Bouncy</h2>
+                    <p class="b-sectionTitle__subtitle">At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                        blanditiis
                         praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
                         occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
                         id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio.
                     </p>
-                    <a href="#" class="buttonLink">Read More</a>
+                    <a href="#" class="buttonLink buttonLinkAbout">Read More</a>
                 </div>
                 <div class="b-aboutUs__imgBox col-md-3">
                     <img src="images/IPAD.png" alt="#" class="b-aboutUs__img">
+                </div>
+            </section>
+            <section class="b-details row">
+                <div class="b-details__titleBox row col-md-12">
+                    <h2 class="b-sectionTitle b-sectionTitle_details col">DetailS ABOUT BOUNCY</h2>
+                    <p class="b-sectionTitle__subtitle b-sectionTitle__subtitle_details col">At vero eos et accusamus et
+                        iusto odio dignissimos ducimus
+                        qui <br>
+                        blanditiis praesentium
+                    </p>
+                    <div class="b-details__iconsMenu row col">
+                        <div class="b-details__icon b-details__icon_heart b-details__icon_active col-auto">
+                            <a class="b-details__iconLink" href="#"></a>
+                        </div>
+                        <div class="b-details__icon b-details__icon_mouse col-auto">
+                            <a class="b-details__iconLink" href="#"></a>
+                        </div>
+                        <div class="b-details__icon b-details__icon_light col-auto">
+                            <a class="b-details__iconLink" href="#"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="b-details__descBox row col-md-12">
+                    <h2 class="b-details__descTitle">Creative Ideas</h2>
+                    <p class="b-details__desc">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                        praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
+                        occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
+                        id est laborum et dolorum fuga. Et harum quidem. At vero eos et accusamus et iusto odio
+                        dignissimos ducimus qui blanditiis
+                        praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
+                        occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
+                        id est laborum et dolorum fuga. Et harum quidem.At vero eos et accusamus et iusto odio
+                        dignissimos ducimus qui blanditiis
+                        praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint
+                        occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
+                        id est laborum et dolorum fuga. Et harum quidem. </p>
                 </div>
             </section>
         </main>
 
 
     </div>
-
+    <script src="https://kit.fontawesome.com/37babfd013.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
     </script>
@@ -75,6 +116,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
+
 </body>
 
 
