added services section

--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
             </section>
             <section class="b-details row">
                 <div class="b-details__titleBox row col-md-12">
-                    <h2 class="b-sectionTitle b-sectionTitle_details col">DetailS ABOUT BOUNCY</h2>
-                    <p class="b-sectionTitle__subtitle b-sectionTitle__subtitle_details col">At vero eos et accusamus et
+                    <h2 class="b-sectionTitle sectionTitleCenter col">DetailS ABOUT BOUNCY</h2>
+                    <p class="b-sectionTitle__subtitle sectionSubtitleCenter col">At vero eos et accusamus et
                         iusto odio dignissimos ducimus
                         qui <br>
                         blanditiis praesentium
                     </p>
-                    <div class="b-details__iconsMenu row col">
-                        <div class="b-details__icon b-details__icon_heart b-details__icon_active col-auto">
-                            <a class="b-details__iconLink" href="#"></a>
+                    <div class="b-iconsMenu row col">
+                        <div class="b-iconsMenu__item iconHeart b-iconsMenu__item_active col-auto">
+                            <a class="b-iconsMenu__link" href="#"></a>
                         </div>
-                        <div class="b-details__icon b-details__icon_mouse col-auto">
-                            <a class="b-details__iconLink" href="#"></a>
+                        <div class="b-iconsMenu__item iconMouse col-auto">
+                            <a class="b-iconsMenu__link" href="#"></a>
                         </div>
-                        <div class="b-details__icon b-details__icon_light col-auto">
-                            <a class="b-details__iconLink" href="#"></a>
+                        <div class="b-iconsMenu__item iconLight col-auto">
+                            <a class="b-iconsMenu__link" href="#"></a>
                         </div>
                     </div>
                 </div>
@@ -102,6 +102,92 @@
                         id est laborum et dolorum fuga. Et harum quidem. </p>
                 </div>
             </section>
+            <section class="b-services row">
+                <div class="b-services__titleBox col-12">
+                    <h2 class="b-sectionTitle sectionTitleCenter col">Our Services</h2>
+                    <p class="b-sectionTitle__subtitle sectionSubtitleCenter col">At vero eos et accusamus et iusto odio
+                        dignissimos ducimus qui <br> blanditiis praesentium
+                    </p>
+                </div>
+                <div class="b-services__asideContent row col-lg-6">
+                    <div class="b-iconsMenu b-iconsMenu_vertical col-md-2">
+                        <div class="b-iconsMenu__item b-iconsMenu__item_vertical iconTools">
+                            <a class="b-iconsMenu__link" href="#"></a>
+                        </div>
+                        <div class="b-iconsMenu__item iconRoller b-iconsMenu__item_active b-iconsMenu__item_vertical">
+                            <a class="b-iconsMenu__link" href="#"></a>
+                        </div>
+                        <div class="b-iconsMenu__item iconJoystick b-iconsMenu__item_vertical">
+                            <a class="b-iconsMenu__link" href="#"></a>
+                        </div>
+                        <div class="b-iconsMenu__item iconCable b-iconsMenu__item_vertical">
+                            <a class="b-iconsMenu__link" href="#"></a>
+                        </div>
+                    </div>
+                    <div class="b-services__desc col-md-7">
+                        <h2 class="b-services__descTitle">Graphic Design</h2>
+                        <p class="b-services__descText">At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                            blanditiis praesentium voluptatum deleniti. quos dolores et quas molestias excepturi sint
+                            occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia
+                            animi,
+                            id est laborum et dolorum fuga. </p>
+                    </div>
+                </div>
+                <div class="progressBox col-lg-6">
+                    <div class="row">
+                        <div class="col-sm-3 progress-item">
+                            <div class="progress" data-percentage="80">
+                                <span class="progress-left">
+                                    <span class="progress-bar"></span>
+                                </span>
+                                <span class="progress-right">
+                                    <span class="progress-bar"></span>
+                                </span>
+                                <div class="progress-value">
+                                    <div class="percent">
+                                        80%
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="progress-desc">Branding</div>
+                        </div>
+                        <div class="col-sm-3 progress-item">
+                            <div class="progress" data-percentage="70">
+                                <span class="progress-left">
+                                    <span class="progress-bar"></span>
+                                </span>
+                                <span class="progress-right">
+                                    <span class="progress-bar"></span>
+                                </span>
+                                <div class="progress-value">
+                                    <div class="percent">
+                                        70%
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="progress-desc">Web Design</div>
+                        </div>
+                        <div class="col-sm-3 progress-item">
+                            <div class="progress" data-percentage="60">
+                                <span class="progress-left">
+                                    <span class="progress-bar"></span>
+                                </span>
+                                <span class="progress-right">
+                                    <span class="progress-bar"></span>
+                                </span>
+                                <div class="progress-value">
+                                    <div class="percent">
+                                        60%
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="progress-desc">UI/UX</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
         </main>
 
 
