added part of portfolio section

--- a/index.html
+++ b/index.html
@@ -202,6 +202,291 @@
                     <img src="images/impressed-img.png" alt="impressed-img" class="b-impressed__img">
                 </div>
             </section>
+            <section class="b-portfolio">
+                <div class="b-portfolio__title">
+                    <h2 class="b-sectionTitle sectionTitleCenter">THE PORTFOLIO</h2>
+                    <p class="b-sectionTitle__subtitle sectionSubtitleCenter">At vero eos et accusamus et iusto odio
+                        dignissimos ducimus qui <br> blanditiis praesentium
+                    </p>
+                </div>
+                <div class="b-portfolio__nav d-none d-lg-block">
+                    <a class="b-portfolio__navItems" href="#">All Works</a>
+                    <a class="b-portfolio__navItems" href="#">Print</a>
+                    <a class="b-portfolio__navItems" href="#">Identity</a>
+                    <a class="b-portfolio__navItems" href="#">Branding</a>
+                    <a class="b-portfolio__navItems" href="#">Web</a>
+                    <a class="b-portfolio__navItems" href="#">HTML</a>
+                    <a class="b-portfolio__navItems" href="#">Wordpress</a>
+                </div>
+                <div class="dropdown d-block d-lg-none">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Portfolio Menu
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">All Works</a>
+                        <a class="dropdown-item" href="#">Print</a>
+                        <a class="dropdown-item" href="#">Identity</a>
+                        <a class="dropdown-item" href="#">Branding</a>
+                        <a class="dropdown-item" href="#">Web</a>
+                        <a class="dropdown-item" href="#">HTML</a>
+                        <a class="dropdown-item" href="#">Wordpress</a>
+                    </div>
+                </div>
+                <div class="b-portfolio__imgBox row">
+
+                    <div class="b-portfolio__col1 col-lg-3 col-md-6">
+                        <div class="b-portfolio__img1-1">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="b-portfolio__img2-1">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="b-portfolio__img3-1">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="b-portfolio__col2 col-lg-3 col-md-6">
+
+                        <div class="b-portfolio__img1-2">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="b-portfolio__img2-2">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="b-portfolio__img3-2">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="b-portfolio__col3 col-lg-3 col-md-6">
+
+                        <div class="b-portfolio__img1-3">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="b-portfolio__img2-3">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="b-portfolio__img3-3">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="b-portfolio__col4 col-lg-3 col-md-6">
+
+                        <div class="b-portfolio__img1-4">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="b-portfolio__img2-4">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="b-portfolio__img3-4">
+                            <div class="b-portfolio__textUp">
+                                <h2 class="b-portfolio__imgTitle"><a class="b-portfolio__imgLink" href="#">TITLE
+                                        HERE</a>
+                                </h2>
+                                <p class="b-portfolio__imgDesc">At vero eos et accusamus et iusto odio dignissimos
+                                    ducimus
+                                    qui
+                                    blanditiis praesentium</p>
+                                <div class="b-iconsMenu b-portfolio__iconsBox">
+                                    <div class="b-iconsMenu__item b-portfolio__iconLink">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                    <div class="b-iconsMenu__item b-portfolio__iconLike">
+                                        <a class="b-iconsMenu__link" href="#"></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+            </section>
 
 
         </main>
